@@ -1,3 +1,8 @@
+2009-10-31  Chong Yidong  <cyd@stupidchicken.com>
+
+	* frame.c (Fmake_frame_invisible, Fframe_visible_p): Doc fix
+	(Bug#4827).
+
 2009-10-30  Eli Zaretskii  <eliz@gnu.org>
 
 	* s/msdos.h (SYSTEM_PURESIZE_EXTRA): Redefine to waste less pure
